# cocotbext-safeSpi

./: .gitignore  README.md  pyproject.toml  setup.py
cocotbext/safeSpi/: _version.py  safeSpi.py
tests/: Makefile  results.xml  safeSpi.py  test.py
tests/hdl/: spi.v  spi_slave_inf.v  spi_slave_outf.v
tests/test_inf/: Makefile  components.py  test_inf.py
tests/test_inf/sim_build/: sim.vvp
tests/test_outf/: Makefile  components.py  test_outf.py
tests/test_outf/sim_build/: sim.vvp
tests/wrappers/: spi_test.v
